Updated pom.xml to configure Jacoco and Pitest.